--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Quiz Enade - Arquitetura</title>
     <link rel="stylesheet" href="css/style.css" />
+    <script src="js/question.json" defer></script>
+    <script src="js/app.js" defer></script>
+    <script src="js/set-questions.js" defer></script>
+    <script src="js/get-results.js" defer></script>
   </head>
   <body>
     <header class="header">
@@ -74,10 +78,7 @@
         Voltar ao início
       </button>
     </div>
-    <script src="js/question.js"></script>
-    <script src="js/app.js"></script>
-    <script src="js/set-questions.js"></script>
-    <script src="js/get-results.js"></script>
+
     <footer class="footer">
       <p>Mario Henrique Cezar</p>
       <p>Todos os direitos reservados</p>
