--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Quiz Enade - Arquitetura</title>
     <link rel="stylesheet" href="css/style.css" />
-    <script src="js/question.json" defer></script>
+    <script src="js/questions.json" defer></script>
     <script src="js/app.js" defer></script>
     <script src="js/set-questions.js" defer></script>
     <script src="js/get-results.js" defer></script>
