--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="css/style.css" />
     <script src="js/questions.json" defer></script>
     <script src="js/app.js" defer></script>
-    <script src="js/set-questions.js" defer></script>
-    <script src="js/get-results.js" defer></script>
+    <script src="js/setQuestions.js" defer></script>
+    <script src="js/getResults.js" defer></script>
   </head>
   <body>
     <header class="header">
